# bug_flood

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
convex_obstacle_sim_scripts/: run_BFMTstar.bash  run_BITstar.bash  run_CForest.bash  run_FMTstar.bash  run_InformedRRTStar.bash  run_PRMstar.bash  run_RRT.bash  run_bug_flood.bash  run_bug_flood_first.bash  run_ompl.sh  run_vg.bash
convex_obstacles/100_obstacles/: lines_1.txt  lines_10.txt  lines_100.txt  lines_11.txt  lines_12.txt  lines_13.txt  lines_14.txt  lines_15.txt  lines_16.txt  lines_17.txt  lines_18.txt  lines_19.txt  lines_2.txt  lines_20.txt  lines_21.txt  lines_22.txt  lines_23.txt  lines_24.txt  lines_25.txt  lines_26.txt  lines_27.txt  lines_28.txt  lines_29.txt  lines_3.txt  lines_30.txt  lines_31.txt  lines_32.txt  lines_33.txt  lines_34.txt  lines_35.txt  lines_36.txt  lines_37.txt  lines_38.txt  lines_39.txt  lines_4.txt  lines_40.txt  lines_41.txt  lines_42.txt  lines_43.txt  lines_44.txt  (+360 more)
convex_obstacles/10_obstacles/: lines_1.txt  lines_10.txt  lines_100.txt  lines_11.txt  lines_12.txt  lines_13.txt  lines_14.txt  lines_15.txt  lines_16.txt  lines_17.txt  lines_18.txt  lines_19.txt  lines_2.txt  lines_20.txt  lines_21.txt  lines_22.txt  lines_23.txt  lines_24.txt  lines_25.txt  lines_26.txt  lines_27.txt  lines_28.txt  lines_29.txt  lines_3.txt  lines_30.txt  lines_31.txt  lines_32.txt  lines_33.txt  lines_34.txt  lines_35.txt  lines_36.txt  lines_37.txt  lines_38.txt  lines_39.txt  lines_4.txt  lines_40.txt  lines_41.txt  lines_42.txt  lines_43.txt  lines_44.txt  (+360 more)
convex_obstacles/200_obstacles/: lines_1.txt  lines_10.txt  lines_100.txt  lines_11.txt  lines_12.txt  lines_13.txt  lines_14.txt  lines_15.txt  lines_16.txt  lines_17.txt  lines_18.txt  lines_19.txt  lines_2.txt  lines_20.txt  lines_21.txt  lines_22.txt  lines_23.txt  lines_24.txt  lines_25.txt  lines_26.txt  lines_27.txt  lines_28.txt  lines_29.txt  lines_3.txt  lines_30.txt  lines_31.txt  lines_32.txt  lines_33.txt  lines_34.txt  lines_35.txt  lines_36.txt  lines_37.txt  lines_38.txt  lines_39.txt  lines_4.txt  lines_40.txt  lines_41.txt  lines_42.txt  lines_43.txt  lines_44.txt  (+360 more)
convex_obstacles/20_obstacles/: lines_1.txt  lines_10.txt  lines_100.txt  lines_11.txt  lines_12.txt  lines_13.txt  lines_14.txt  lines_15.txt  lines_16.txt  lines_17.txt  lines_18.txt  lines_19.txt  lines_2.txt  lines_20.txt  lines_21.txt  lines_22.txt  lines_23.txt  lines_24.txt  lines_25.txt  lines_26.txt  lines_27.txt  lines_28.txt  lines_29.txt  lines_3.txt  lines_30.txt  lines_31.txt  lines_32.txt  lines_33.txt  lines_34.txt  lines_35.txt  lines_36.txt  lines_37.txt  lines_38.txt  lines_39.txt  lines_4.txt  lines_40.txt  lines_41.txt  lines_42.txt  lines_43.txt  lines_44.txt  (+360 more)
convex_obstacles/250_obstacles/: lines_1.txt  lines_10.txt  lines_100.txt  lines_11.txt  lines_12.txt  lines_13.txt  lines_14.txt  lines_15.txt  lines_16.txt  lines_17.txt  lines_18.txt  lines_19.txt  lines_2.txt  lines_20.txt  lines_21.txt  lines_22.txt  lines_23.txt  lines_24.txt  lines_25.txt  lines_26.txt  lines_27.txt  lines_28.txt  lines_29.txt  lines_3.txt  lines_30.txt  lines_31.txt  lines_32.txt  lines_33.txt  lines_34.txt  lines_35.txt  lines_36.txt  lines_37.txt  lines_38.txt  lines_39.txt  lines_4.txt  lines_40.txt  lines_41.txt  lines_42.txt  lines_43.txt  lines_44.txt  (+360 more)
convex_obstacles/50_obstacles/: lines_1.txt  lines_10.txt  lines_100.txt  lines_11.txt  lines_12.txt  lines_13.txt  lines_14.txt  lines_15.txt  lines_16.txt  lines_17.txt  lines_18.txt  lines_19.txt  lines_2.txt  lines_20.txt  lines_21.txt  lines_22.txt  lines_23.txt  lines_24.txt  lines_25.txt  lines_26.txt  lines_27.txt  lines_28.txt  lines_29.txt  lines_3.txt  lines_30.txt  lines_31.txt  lines_32.txt  lines_33.txt  lines_34.txt  lines_35.txt  lines_36.txt  lines_37.txt  lines_38.txt  lines_39.txt  lines_4.txt  lines_40.txt  lines_41.txt  lines_42.txt  lines_43.txt  lines_44.txt  (+360 more)
extras/: run_bug_flood.bash  run_bug_flood_first.bash
extras/OMPL/: OptimalPlanning.cpp  OptimalPlanning_New.cpp  run_BFMTstar.bash  run_BITstar.bash  run_CForest.bash  run_FMTstar.bash  run_InformedRRTStar.bash  run_PRMstar.bash  run_RRT.bash  run_RRTStar.bash  run_ompl.sh
extras/Visibility Graph/Convex VG/VisibilityGraphsNewCommit/: CMakeLists.txt  VisibilityGraph.cpp  VisibilityGraphController.cpp  dijkstra.cpp  dj.h.h  line.cpp  line.h  main.cpp  obstacleGeneration.h  point.h
extras/Visibility Graph/Convex VG/VisibilityGraphsNewCommit/include/: obstacles.h
extras/Visibility Graph/Convex VG/VisibilityGraphsNewCommit/src/: VisibilityGraph.cpp  VisibilityGraphController.cpp  graphutility.cpp  line.cpp  main.cpp
extras/Visibility_Graph/VisibilityGraph/: CMakeLists.txt
extras/Visibility_Graph/VisibilityGraph/src/: VisibilityGraphController.cpp  dijkstra.cpp
extras/Visibility_Graph/VisibilityGraph_Convex/: CMakeLists.txt
extras/Visibility_Graph/VisibilityGraph_Convex/include/: drawing.h  line.h  obstacleGeneration.h  obstacles.h  utility.h
extras/Visibility_Graph/VisibilityGraph_Convex/src/: VisibilityGraph.cpp  VisibilityGraphController.cpp  dijkstra.cpp  dj.cpp.cpp  graphutility.cpp  main.cpp  obstacles.cpp
extras/obstacle_generation/: generateObstacles.bash
extras/obstacle_generation/Generation_Bug_Flood/: CMakeLists.txt  main.cpp
extras/obstacle_generation/Generation_Bug_Flood/obstacleGeneration/: Generation_Bug_Flood  map_1.txt  map_10.txt  map_100.txt  map_11.txt  map_12.txt  map_13.txt  map_14.txt  map_15.txt  map_16.txt  map_17.txt  map_18.txt  map_19.txt  map_2.txt  map_20.txt  map_21.txt  map_22.txt  map_23.txt  map_24.txt  map_25.txt  map_26.txt  map_27.txt  map_28.txt  map_29.txt  map_3.txt  map_30.txt  map_31.txt  map_32.txt  map_33.txt  map_34.txt  map_35.txt  map_36.txt  map_37.txt  map_38.txt  map_39.txt  map_4.txt  map_40.txt  map_41.txt  map_42.txt  map_43.txt  (+130 more)
src/: bug.cpp  bug_flood.cpp  bug_flood_extra.cpp  env_display.cpp  envirnment.cpp  environment.cpp  helper_functions.cpp  line.cpp  map.cpp  obstacle_io.cpp
(+2161 files in other folders)
