cmake_minimum_required(VERSION 3.3)
project(VisibilityGraph_Convex)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
set(SOURCE_FILES src/main.cpp src/point.cpp src/line.cpp src/graphutility.cpp src/obstacles.cpp src/pointHandler.cpp include/dijkstra.h src/dijkstra.cpp src/VisibilityGraph.cpp src/VisibilityGraphController.cpp include/geometry.h include/boostHelper.h include/CImg.h include/utility.h include/drawing.h include/point.h include/line.h include/graphutility.h include/obstacles.h include/obstacleController.h include/pointHandler.h include/VisibilityGraph.h include/VisibilityGraphController.h include/dj.h.h src/dj.cpp.cpp include/obstacleGeneration.h)
add_executable(VisibilityGraph_Convex ${SOURCE_FILES})
target_link_libraries(VisibilityGraph_Convex -lX11 -pthread)
